--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -34,7 +34,7 @@
             </div>
           </div>
         </div>
-        <div class="form-group">
+<!--        <div class="form-group">
           <label for="email">Email</label>
           <input
             type="email"
@@ -44,14 +44,14 @@
             required
             email
             #email="ngModel"
-          />
+          /> 
           <div class="alert-danger" *ngIf="f.submitted && email.invalid">
             <div *ngIf="email.errors.required">Email is required</div>
             <div *ngIf="email.errors.email">
               Email must be a valid email address
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="form-group">
           <label for="password">Password</label>
           <input
