--- a/src/app/board-user/board-user.component.html
+++ b/src/app/board-user/board-user.component.html
@@ -1,25 +1,29 @@
+<nav>
+    <ul>
+      <li>
+        <div class="home-icon">
+          <div class="roof">
+            <div class="roof-edge"></div>
+          </div>
+          <div class="front"></div>
+        </div>
+      </li>
+      <li>
+        <div class="about-icon">
+          <div class="head">
+            <div class="eyes"></div>
+            <div class="beard"></div>
+          </div>
+        </div>
+      </li>
+              
+    </ul>
+  </nav>
 
-<html>
-	<head>
-		<title>Menu Desplegable</title>
-		<link rel="stylesheet" href="board-user.component.css">
-	</head>
-	<body>
-		<div id="header">
-			<div class = "posicionamiento">
-			<nav> <!-- Aqui estamos iniciando la nueva etiqueta nav -->
-				<ul class="nav">
-					<li><a class ="menus">Empleados</a>
-						<ul>
-							<li><a class ="menus" href="/crear_usuarios">Maestro</a></li>
-							<li><a class ="menus" href="/editar_usuarios">Empleados Inactivos</a></li>
-						</ul>
-					</li>
-									
 
-				</ul>
-			</nav><!-- Aqui estamos cerrando la nueva etiqueta nav -->
-		</div>
-		</div>
-	</body>
-</html>
+  <section>
+    <h1>Empleados</h1>
+    <h2></h2>
+  </section>
+  
+
