--- a/src/app/board-user/board-user.component.html
+++ b/src/app/board-user/board-user.component.html
@@ -1,25 +1,22 @@
 <nav>
-    <ul>
-      <li>
-        <div class="home-icon">
-          <div class="roof">
-            <div class="roof-edge"></div>
-          </div>
-          <div class="front"></div>
+  <ul>
+    <li>
+      <div class="home-icon">
+        <div class="roof">
+          <div class="roof-edge"></div>
         </div>
-      </li>
-      <li>
-        <div class="about-icon">
-          <div class="head">
-            <div class="eyes"></div>
-            <div class="beard"></div>
-          </div>
-        </div>
-      </li>
-              
-    </ul>
-  </nav>
-
+        <div class="front"></div>
+      </div>
+    </li>
+    <li>
+      <div class="work-icon">
+        <div class="paper"></div>
+        
+      </div>
+    </li>
+    
+  </ul>
+</nav>
 
   <section>
     <h1>Empleados</h1>
