--- a/src/app/board-user/board-user.component.css
+++ b/src/app/board-user/board-user.component.css
@@ -80,7 +80,7 @@ nav ul li:nth-child(2):after {
 	line-height: 88px;
 }
 nav ul li:nth-child(3):after { 
-	content: "Work";
+	content: "Inactivos2";
 	line-height: 85px;
 }
 nav ul li:nth-child(4):after { 
