--- a/src/app/board-user/board-user.component.html
+++ b/src/app/board-user/board-user.component.html
@@ -1,19 +1,32 @@
 <nav>
   <ul>
+    <div>
+      <a href="/maestroempleados">
     <li>
+      
       <div class="home-icon">
         <div class="roof">
-          <div class="roof-edge"></div>
+          <div class="roof-edge">
+           
+          </div>
         </div>
         <div class="front"></div>
       </div>
     </li>
+    </a>
+    
+    
+    
+    
+      <a href="/maestroempleados">
     <li>
       <div class="work-icon">
         <div class="paper"></div>
         
       </div>
     </li>
+  </a>
+</div>
     
   </ul>
 </nav>
