--- a/src/app/board-user/board-user.component.css
+++ b/src/app/board-user/board-user.component.css
@@ -1,316 +1,143 @@
-*,*:before,*:after {
-	box-sizing: border-box;
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
+@media(min-width:768px) {
+    body {
+        margin-top: 50px;
+    }
+    /*html, body, #wrapper, #page-wrapper {height: 100%; overflow: hidden;}*/
 }
 
-:after {
-	content: "";
+#wrapper {
+    padding-left: 0;    
 }
 
-section {
-  position: relative;
-  left: 100px;
+#page-wrapper {
+    width: 100%;        
+    padding: 0;
+    background-color: #fff;
 }
 
-h1 { 
-  margin:80px 0 10px 0;
-  font-size: 52px;
-  font-family: 'Montserrat', sans-serif;
-  text-transform: uppercase;
-  text-shadow: 1px 1px 0px black, 
-	2px 2px 0px black,
-	3px 3px 0px black, /*#DC143C*/
-	4px 4px 0px black;
+@media(min-width:768px) {
+    #wrapper {
+        padding-left: 225px;
+    }
+
+    #page-wrapper {
+        padding: 22px 10px;
+    }
 }
 
-h2 {
-  font-size: 24px;
+/* Top Navigation */
+
+.top-nav {
+    padding: 0 15px;
 }
 
-body {
-  padding: 200px 0;
-	background: lightblue;
-  color: white;
-  max-width:640px;
-	font-family: 'Montserrat', sans-serif;
-	font-size: 14px;
-  line-height:1.4;
-  font-smoothing: anti-aliased;
+.top-nav>li {
+    display: inline-block;
+    float: left;
 }
 
-nav {
-  float: left;
-	position: relative;
-	top: 0;
-  left: 0;
-	background: transparent;
+.top-nav>li>a {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    line-height: 20px;
+    color: #fff;
 }
 
-nav ul {
-	text-align: center;
+.top-nav>li>a:hover,
+.top-nav>li>a:focus,
+.top-nav>.open>a,
+.top-nav>.open>a:hover,
+.top-nav>.open>a:focus {
+    color: #fff;
+    background-color: #1a242f;
 }
 
-nav ul li {
-	position: relative;
-  width: 70px;
-  cursor: pointer;
-	background: grey; /*crimson*/
-	text-transform: uppercase;
-	transition:all .4s ease-out;
+.top-nav>.open>.dropdown-menu {
+    float: left;
+    position: absolute;
+    margin-top: 0;
+    /*border: 1px solid rgba(0,0,0,.15);*/
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    background-color: #fff;
+    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
 }
 
-nav ul li:after {
-	position: absolute;
-	background: white;
-	color: grey; /*crimson*/
-	top:0;
-	left: 70px;
-	width: 70px; height: 100%;
-  opacity:.5;
-  transform: perspective(400px) rotateY(90deg);
-	transform-origin: 0 100%;
-	transition:all .4s ease-out;
+.top-nav>.open>.dropdown-menu>li>a {
+    white-space: normal;
 }
 
-nav ul li:nth-child(1):after { 
-	content: "Maestro";
-	line-height: 88px;
-}
-nav ul li:nth-child(2):after { 
-	content: "Inactivos";
-	line-height: 88px;
-}
-nav ul li:nth-child(3):after { 
-	content: "Inactivos2";
-	line-height: 85px;
-}
-nav ul li:nth-child(4):after { 
-	content: "Say hi";
-	line-height: 70px;
+/* Side Navigation */
+
+@media(min-width:768px) {
+    .side-nav {
+        position: fixed;
+        top: 60px;
+        left: 225px;
+        width: 225px;
+        margin-left: -225px;
+        border: none;
+        border-radius: 0;
+        border-top: 1px rgba(0,0,0,.5) solid;
+        overflow-y: auto;
+        background-color: #222;
+        /*background-color: #5A6B7D;*/
+        bottom: 0;
+        overflow-x: hidden;
+        padding-bottom: 40px;
+    }
+
+    .side-nav>li>a {
+        width: 225px;
+        border-bottom: 1px rgba(0,0,0,.3) solid;
+    }
+
+    .side-nav li a:hover,
+    .side-nav li a:focus {
+        outline: none;
+        background-color: #1a242f !important;
+    }
 }
 
-nav ul li:hover {
-	transform: translateX(-70px);
+.side-nav>li>ul {
+    padding: 0;
+    border-bottom: 1px rgba(0,0,0,.3) solid;
 }
 
-nav ul li:hover:after {
-  opacity: 1;
-	transform: perspective(400px) rotateY(0deg) scale(1) ;
+.side-nav>li>ul>li>a {
+    display: block;
+    padding: 10px 15px 10px 38px;
+    text-decoration: none;
+    /*color: #999;*/
+    color: #fff;    
 }
 
-
-nav ul li > div {
-	display: inline-block;
-	padding: 25px 0;
-	background: transparent;
+.side-nav>li>ul>li>a:hover {
+    color: #fff;
 }
 
-nav ul li div { position: relative; }
-
-.roof {
-	width: 0;
-	height: 0;
-	top:2px;
-	border-style: solid;
-	border-width: 0 21px 15px 21px;
-	border-color: transparent transparent #ffffff transparent;
+.navbar .nav > li > a > .label {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  position: absolute;
+  top: 14px;
+  right: 6px;
+  font-size: 10px;
+  font-weight: normal;
+  min-width: 15px;
+  min-height: 15px;
+  line-height: 1.0em;
+  text-align: center;
+  padding: 2px;
 }
 
-.roof-edge {
-	position: absolute;
-	z-index: 20;
-	left: -17px;
-	top: 3px;
-	width: 0;
-	height: 0;
-	border-style: solid;
-	border-width: 0 17px 12px 17px;
-	border-color: transparent transparent grey transparent; /*crimson*/
-}
-/*white triangle over red triangle*/
-.roof-edge:after {
-	position: absolute;
-	left: -14.5px;
-	top: 3px;
-	width: 0;
-	height: 0;
-	border-style: solid;
-	border-width: 0 14.5px 10px 14.5px;
-	border-color: transparent transparent white transparent;
+.navbar .nav > li > a:hover > .label {
+  top: 10px;
 }
 
-.front {
-	position: relative;
-	top: 3px;
-	width: 28.5px;
-	height: 20px;
-	margin: 0 auto;
-	background: white;
+.navbar-brand {
+    padding: 5px 15px;
 }
-/*door*/
-.front:after {
-	position: absolute;
-	background: grey; /*crimson*/
-	width: 11px;
-	height: 13px;
-	bottom: 0;
-	left:9px;
-}
-
-/*/// About me ////*/
-
-.head {
-	width: 32px;
-	height: 35px;
-	background: white;
-	border-radius:8px;
-}
-/*mouth*/
-.head:after {
-	width: 4px;
-	height: 10px;
-	background: white;
-	position: absolute;
-	border-radius:4px 0 0 4px;
-	top:21px;
-	left: 14px;
-	transform:rotate(270deg);
-}
-
-.eyes {
-	width: 8px;
-	height: 5px;
-	border-radius: 50%;
-	position: absolute;
-	top: 10px;
-	left: 5px;
-	background: grey;/*crimson*/
-}
-/*right eye*/
-.eyes:after {
-	width: 8px;
-	height: 5px;
-	border-radius: 0%;
-	position: absolute;
-	top: 0;
-	left: 14px;
-	background: grey; /*crimson*/
-}
-
-.beard {
-	width: 32px;
-	height: 17px;
-	background: grey; /*crimson*/
-	border:2px solid white;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	border-radius:0 0 8px 8px;
-}
-/*nose*/
-.beard:after {
-	position: absolute;
-	top:-2px;
-	left: 11px;
-	background: white;
-	width:6px;
-	height: 4px;
-	border-left:1px solid grey; /*crimson*/
-	border-right:1px solid grey; /*crimson*/
-}
-
-/*//work//*/
-
-.paper {
-	position: relative;
-	height:32px;
-	width: 29px;
-	background: white;
-	border:2px solid white;
-}
-
-/*window*/
-.paper:after {
-	position: absolute;
-	top:1px;
-	left: 0;
-	width: 25px;
-	height: 29px;
-	background: white;
-	border-top:4px solid grey;/*crimson*/
-}
-
-.lines {
-	position: absolute;
-	top: 36px;
-	left: 5px;
-	width: 11px;
-	box-shadow: 0 0 0 1px grey; /*crimson*/
-}
-
-.lines:after {
-	position: absolute;
-	top: 4px;
-	left: 3px;
-	width: 14px;
-	box-shadow: 0 0 0 1px grey; /*crimson*/
-}
-
-.lines:nth-child(2) {
-	position: absolute;
-	top: 44px;
-	left: 8px;
-	width: 11px;
-}
-
-.lines:nth-child(2):after {
-	position: absolute;
-	top: 4px;
-	left: -3px;
-	width: 11px;
-}
-
-.lines:nth-child(3) {
-	position: absolute;
-	top: 52px;
-	left: 8px;
-	width: 14px;
-}
-
-.lines:nth-child(3):after {
-	display: none;
-}
-
-/*//mail //*/
-
-.mail-base {
-	position: relative;
-	width: 32px;
-	height: 18px;
-	background: white;
-}
-
-.mail-top {
-	position: absolute;
-	z-index: 20;
-	left: 0;
-	top: 0;
-	width: 0;
-	height: 0;
-	transform: rotate(180deg);
-	border-style: solid;
-	border-width: 0 16px 11px 16px;
-	border-color: transparent transparent grey transparent; /*crimson*/
-}
-
-.mail-top:after {
-	position: absolute;
-	z-index: 20;
-	left: -16px;
-	top: 3px;
-	width: 0;
-	height: 0;
-	border-style: solid;
-	border-width: 0 16px 9px 16px;
-	border-color: transparent transparent white transparent;
-}
-
