--- a/src/app/maestroempleados/maestroempleados.component.html
+++ b/src/app/maestroempleados/maestroempleados.component.html
@@ -1,1 +1,20 @@
-<p>maestroempleados works!</p>
+
+<table class="table">
+    <thead class="thead-dark">
+        <br>
+      <tr>
+        <th scope="col">Codigo</th>
+        <th scope="col">Nombres</th>
+        <th scope="col">Apellidos</th>
+        <th scope="col">Puesto</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let empleados of empleados">
+        <th scope="row">{{empleados.id}}</th>
+        <td>{{empleados.nombres}}</td>
+        <td>{{empleados.apellidos}}</td>
+        <td>{{empleados.puesto}}</td>
+      </tr>
+    </tbody>
+  </table>
