--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-4">
     <div class="card card-container">
-      <img id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" class="profile-img-card"/>
+      <img id="profile-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSb7OX8-030FDWTdZsUsosI1W7mpolxXzogmw&usqp=CAU" class="profile-img-card"/>
       <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
         <div class="form-group">
           <label for="username">Username</label>
