icono login/register

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,8 +1,8 @@
-<div class="col-md-12">
+<div class="col-md-4">
     <div class="card card-container">
       <img
         id="profile-img"
-        src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSb7OX8-030FDWTdZsUsosI1W7mpolxXzogmw&usqp=CAU"
         class="profile-img-card"
       />
       <form
