--- a/src/app/maestroempleados/maestroempleados.component.html
+++ b/src/app/maestroempleados/maestroempleados.component.html
@@ -67,18 +67,19 @@
     <!-- /#page-wrapper -->
 </div><!-- /#wrapper -->
 
-<div id="wrapper">
+<div>
 <br><br><br>
 <h1>Maestro</h1>
 <br>    
-<table class="table">
+<table class="table" border="3">
     <thead class="thead-dark">
-        <br>
+        
       <tr>
         <th scope="col">Codigo</th>
         <th scope="col">Nombres</th>
         <th scope="col">Apellidos</th>
         <th scope="col">Puesto</th>
+        <th scope="col">Editar</th>
       </tr>
     </thead>
     <tbody>
@@ -87,6 +88,7 @@
         <td>{{empleados.nombres}}</td>
         <td>{{empleados.apellidos}}</td>
         <td>{{empleados.puesto}}</td>
+        <td><a [routerLink]="['/crudempleados']" class="btn btn-info btn-block">Editar</a></td>
       </tr>
     </tbody>
   </table>
