--- a/src/app/crudempleados/crudempleados.component.css
+++ b/src/app/crudempleados/crudempleados.component.css
@@ -1,6 +1,6 @@
 .container{
 
-    background-color:rgba(14, 136, 242,0.5);
+    background-color:darkgray;
     width: auto;
     border-radius: 10px;
     position:absolute;
