--- a/src/app/maestroempleados/maestroempleados.component.html
+++ b/src/app/maestroempleados/maestroempleados.component.html
@@ -88,7 +88,7 @@
         <td>{{empleados.nombres}}</td>
         <td>{{empleados.apellidos}}</td>
         <td>{{empleados.puesto}}</td>
-        <td><a [routerLink]="['/crudempleados']" class="btn btn-info btn-block">Editar</a></td>
+        <td><a [routerLink]="['/crudempleados', empleados.idempleados]" class="btn btn-info btn-block">Editar</a></td>
       </tr>
     </tbody>
   </table>
