--- a/src/app/maestroempleados/maestroempleados.component.html
+++ b/src/app/maestroempleados/maestroempleados.component.html
@@ -14,17 +14,20 @@
         
         <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
         <!--<div class="collapse navbar-collapse navbar-ex1-collapse">-->
-            <ul class="nav navbar-nav side-nav">
-              <li>
-                <a href="maestroempleados"><i class="fa fa-fw fa-user-plus"></i>  Maestro </a>
-              </li>
+          <ul class="nav navbar-nav side-nav">
+            <li>
+              <a href="maestroempleados"><i class="fa fa-fw fa-search"></i>  Maestro Empleados </a>
+            </li>
+            <li>
+              <a href="crudempleados"><i class="fa fa-fw fa-user-plus"></i>  Agregar Empleados </a>
+            </li>
 
-              <li>
-                <a href="#"><i class="fa fa-fw fa-search"></i>  Inactivos </a>
-              </li>
-              <li>
-                <a href="faq"><i class="fa fa-fw fa fa-question-circle"></i> Ayuda</a>
-              </li>
+            <li>
+              <a href="empleadosinactivos"><i class="fa fa-fw fa-search"></i>  Empleados Inactivos </a>
+            </li>
+            <li>
+              <a href="faq"><i class="fa fa-fw fa fa-question-circle"></i> Ayuda</a>
+            </li>
 
 <!--                <li>
                     <a href="#" data-toggle="collapse" data-target="#submenu-2"><i class="fa fa-fw fa-star"></i>  MENU 2 <i class="fa fa-fw fa-angle-down pull-right"></i></a>
