--- a/src/app/inactivos/inactivos.component.html
+++ b/src/app/inactivos/inactivos.component.html
@@ -1,1 +1,99 @@
-<p>inactivos works!</p>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<!--<div id="throbber" style="display:none; min-height:120px;"></div>
+<div id="noty-holder"></div>-->
+<div>
+<div id="wrapper">
+    <!-- Navigation -->
+ <!--   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"> -->
+        <!-- Brand and toggle get grouped for better mobile display -->
+        
+        
+        <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+        <!--<div class="collapse navbar-collapse navbar-ex1-collapse">-->
+            <ul class="nav navbar-nav side-nav">
+              <li>
+                <a href="maestroempleados"><i class="fa fa-fw fa-search"></i>  Maestro Empleados </a>
+              </li>
+              <li>
+                <a href="crudempleados"><i class="fa fa-fw fa-user-plus"></i>  Agregar Empleados </a>
+              </li>
+
+              <li>
+                <a href="empleadosinactivos"><i class="fa fa-fw fa-search"></i>  Empleados Inactivos </a>
+              </li>
+              <li>
+                <a href="faq"><i class="fa fa-fw fa fa-question-circle"></i> Ayuda</a>
+              </li>
+              
+
+<!--                <li>
+                    <a href="#" data-toggle="collapse" data-target="#submenu-2"><i class="fa fa-fw fa-star"></i>  MENU 2 <i class="fa fa-fw fa-angle-down pull-right"></i></a>
+                    <ul id="submenu-2" class="collapse">
+                        <li><a href="#"><i class="fa fa-angle-double-right"></i> SUBMENU 2.1</a></li>
+                        <li><a href="#"><i class="fa fa-angle-double-right"></i> SUBMENU 2.2</a></li>
+                        <li><a href="#"><i class="fa fa-angle-double-right"></i> SUBMENU 2.3</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="investigaciones/favoritas"><i class="fa fa-fw fa-user-plus"></i>  MENU 3</a>
+                </li>
+                <li>
+                    <a href="sugerencias"><i class="fa fa-fw fa-paper-plane-o"></i> MENU 4</a>
+                </li>-->
+                
+            </ul>
+      <!--  </div> -->
+        <!-- /.navbar-collapse -->
+    <!--</nav>-->
+  </div>
+
+  <!--
+    <div id="page-wrapper">
+        <div class="container-fluid"> -->
+            <!-- Page Heading -->
+ <!--           <div class="row" id="main" >
+                <div class="col-sm-12 col-md-12 well" id="content">
+                -->
+
+<!--
+                </div>
+            </div> -->
+            <!-- /.row -->
+<!--        </div>  -->
+        <!-- /.container-fluid -->
+<!--    </div>      
+
+  -->
+    <!-- /#page-wrapper -->
+</div><!-- /#wrapper -->
+
+<div>
+<br><br><br>
+<h1>Inactivos</h1>
+<br>    
+<table class="table" border="3">
+    <thead class="thead-dark">
+        
+      <tr>
+        <th scope="col">Codigo</th>
+        <th scope="col">Nombres</th>
+        <th scope="col">Apellidos</th>
+        <th scope="col">Puesto</th>
+        <th scope="col">Editar</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let empleados of empleados">
+        <th scope="row">{{empleados.idempleados}}</th>
+        <td>{{empleados.nombres}}</td>
+        <td>{{empleados.apellidos}}</td>
+        <td>{{empleados.puesto}}</td>
+        <td><a [routerLink]="['/crudempleados', empleados.idempleados]" class="btn btn-info btn-block">Editar</a></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
