--- a/src/app/maestroempleados/maestroempleados.component.html
+++ b/src/app/maestroempleados/maestroempleados.component.html
@@ -83,6 +83,7 @@
         <th scope="col">Apellidos</th>
         <th scope="col">Puesto</th>
         <th scope="col">Editar</th>
+        <th scope="col">Perfil</th>
       </tr>
     </thead>
     <tbody>
@@ -92,6 +93,7 @@
         <td>{{empleados.apellidos}}</td>
         <td>{{empleados.puesto}}</td>
         <td><a [routerLink]="['/crudempleados', empleados.idempleados]" class="btn btn-info btn-block">Editar</a></td>
+        <td><a [routerLink]="['/crudempleados', empleados.idempleados]" class="btn btn-primary btn-success">-   Ir   -</a></td>
       </tr>
     </tbody>
   </table>
