--- a/src/app/crudempleados/crudempleados.component.html
+++ b/src/app/crudempleados/crudempleados.component.html
@@ -90,6 +90,7 @@
             <input  class ="cajitas"  type="text" [(ngModel)]="empleados.puesto" name='puesto' placeholder="Puesto" required="required"></p>
         <p>
             <select class ="cajitas"  type="text" [(ngModel)]="empleados.estado" name='estado' placeholder="Estados" required="required" >
+                <option value="" selected="selected">- Seleccionar -</option>  
                 <option value="1">Activo</option> 
                 <option value="2">Inactivo</option> 
              </select>
