--- a/src/app/inactivos/inactivos.component.html
+++ b/src/app/inactivos/inactivos.component.html
@@ -75,7 +75,7 @@
 <br><br><br>
 <h1>Inactivos</h1>
 <br>    
-<table class="table" border="3">
+<table style="background-color:#C0C0C0;" class="table" border="3" >
     <thead class="thead-dark">
         
       <tr>
