--- a/src/app/maestroempleados/maestroempleados.component.html
+++ b/src/app/maestroempleados/maestroempleados.component.html
@@ -74,7 +74,7 @@
 <br><br><br>
 <h1>Maestro</h1>
 <br>    
-<table class="table" border="3">
+<table style="background-color:#C0C0C0;" class="table" border="3">
     <thead class="thead-dark">
         
       <tr>
