--- a/src/app/maestroempleados/maestroempleados.component.html
+++ b/src/app/maestroempleados/maestroempleados.component.html
@@ -93,7 +93,7 @@
         <td>{{empleados.apellidos}}</td>
         <td>{{empleados.puesto}}</td>
         <td><a [routerLink]="['/crudempleados', empleados.idempleados]" class="btn btn-info btn-block">Editar</a></td>
-        <td><a [routerLink]="['/crudempleados', empleados.idempleados]" class="btn btn-primary btn-success">-   Ir   -</a></td>
+        <td><a [routerLink]="['/detalleempleados', empleados.idempleados]" class="btn btn-primary btn-success">-   Ir   -</a></td>
       </tr>
     </tbody>
   </table>
