--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -89,7 +89,7 @@
         <p>
             <input  class ="cajitas"  type="text" [(ngModel)]="detalleempleados.dpi" name='dpi' placeholder="DPI" required="required"></p>
         <p>
-            <input  class ="cajitas"  type="text" [(ngModel)]="detalleempleados.fechaingreso" name='fechaingreso' placeholder="Fecha de Ingreso" required="required"></p>
+            <input  class ="cajitas"  type="date" [(ngModel)]="detalleempleados.fechaingreso" name='fechaingreso' placeholder="Fecha de Ingreso" required="required"></p>
         <p>
             <input  class ="cajitas"  type="text" [(ngModel)]="detalleempleados.vacaciones" name='vacaciones' placeholder="Vacaciones" required="required"></p>
             
