--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -95,7 +95,7 @@
         <input  class ="cajitas"  type="text" [(ngModel)]="detalleempleados.dpi" name='dpi' value="DPI" placeholder="DPI" required="required"></p>
         <p>Fecha Ingreso </p>
         <p>
-            <input  class ="cajitas"  type="date" [(ngModel)]="detalleempleados.fechaingreso" name='fechaingreso' value="Fecha de ingreso" placeholder="Fecha de Ingreso" required="required"></p>
+            <input  class ="cajitas"  type="text" [(ngModel)]="detalleempleados.fechaingreso" name='fechaingreso' value="Fecha de ingreso" placeholder="Fecha de Ingreso" required="required"></p>
         <p>Vacaciones </p>       
         <p>
             <input  class ="cajitas"  type="text" [(ngModel)]="detalleempleados.vacaciones" name='vacaciones' value="Vacaciones" placeholder="Vacaciones" required="required"></p>
