--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,10 +17,10 @@
 
     <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
       <li class="nav-item">
-        <a href="/register" class="nav-link" routerLink="register">lnajera</a>
+        <a href="/register" class="nav-link" routerLink="register">Registrarse</a>
       </li>
       <li class="nav-item">
-        <a href="/login" class="nav-link" routerLink="login">LogOut</a>
+        <a href="/login" class="nav-link" routerLink="login">Iniciar Sesion</a>
       </li>
     </ul>
 
